# indian-stock-screener

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routers/: __init__.py  companies.py  financials.py  prices.py  quality.py  ratios.py  screener.py
config/: __init__.py  logging_config.py  settings.py
db/: __init__.py  models.py  session.py
engine/: __init__.py  growth.py  ratios.py  ttm.py
quality/: __init__.py  anomaly_detector.py  checker.py
scheduler/: __init__.py  jobs.py
scrapers/: __init__.py  base.py  bse_company_master.py  bse_xbrl.py  nse_company_master.py  nse_xbrl.py  price_scraper.py
scrapers/utils/: __init__.py  html_table_parser.py  normalizer.py  session_manager.py  xbrl_parser.py
scripts/: backfill_html.py  backfill_xbrl.py  fetch_sample_data.py  load_sample_to_sqlite.py  populate_database.py  run_quality_check.py  seed_companies.py
tests/: __init__.py
tests/test_engine/: test_ratios.py
tests/test_quality/: __init__.py
tests/test_scrapers/: __init__.py  test_normalizer.py
